[gd_scene load_steps=5 format=3 uid="uid://bunoxyv1csgii"]

[ext_resource type="Script" path="res://scripts/scene_rafinerie.gd" id="1_cqdov"]
[ext_resource type="Texture2D" uid="uid://bttpp0tasdavk" path="res://textures/mine d'or 1.png" id="2_arexr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5aj0n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_arexr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o5eo7"]
size = Vector2(30, 30)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_cqdov")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="StaticBody2D"]
sprite_frames = SubResource("SpriteFrames_5aj0n")

[node name="Area2D" type="Area2D" parent="StaticBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Area2D"]
shape = SubResource("RectangleShape2D_o5eo7")

[connection signal="area_entered" from="StaticBody2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="StaticBody2D/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="StaticBody2D/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody2D/Area2D" to="." method="_on_area_2d_mouse_exited"]
